BMI app is ready

--- a/app/src/main/res/drawable/logo.xml
+++ b/app/src/main/res/drawable/logo.xml
@@ -1,19 +1,145 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="518dp"
-    android:viewportWidth="512"
-    android:viewportHeight="518">
+    android:width="22dp"
+    android:height="24dp"
+    android:viewportWidth="22"
+    android:viewportHeight="24">
   <path
-      android:pathData="M0,6h512v512h-512z"
-      android:fillColor="#F9FAEF"/>
+      android:pathData="M5.927,-0.015L16.026,-0.015A5.836,5.836 0,0 1,21.862 5.821L21.862,18.149A5.836,5.836 0,0 1,16.026 23.985L5.927,23.985A5.836,5.836 0,0 1,0.091 18.149L0.091,5.821A5.836,5.836 0,0 1,5.927 -0.015z"
+      android:fillColor="#02CED5"/>
   <path
-      android:pathData="M197.08,232.91C168.22,250.52 254.81,316.22 254.81,316.22C254.81,316.22 341.4,250.52 311.86,232.91"
-      android:strokeWidth="120.173"
+      android:pathData="M0.091,6.279V18.134C0.091,21.357 2.704,23.97 5.927,23.97H16.026C19.249,23.97 21.862,21.357 21.862,18.134V6.571C20.416,8.003 18.427,8.888 16.231,8.888H6.002C3.661,8.888 1.554,7.882 0.091,6.279Z"
+      android:fillColor="#031F44"/>
+  <group>
+    <clip-path
+        android:pathData="M14.075,8.181H7.891L5.141,3.93C9.595,0.602 12.134,0.937 16.616,3.93L14.075,8.181Z"/>
+    <path
+        android:pathData="M7.891,8.181L2.204,11.862L4.206,14.956H7.891V8.181ZM14.075,8.181V14.956H17.917L19.889,11.658L14.075,8.181ZM16.616,3.93L22.431,7.406L25.737,1.876L20.378,-1.703L16.616,3.93ZM5.141,3.93L1.086,-1.497L-3.987,2.294L-0.547,7.611L5.141,3.93ZM7.891,14.956H14.075V1.407H7.891V14.956ZM19.889,11.658L22.431,7.406L10.801,0.454L8.26,4.705L19.889,11.658ZM20.378,-1.703C17.954,-3.322 14.824,-5.122 11.03,-5.213C7.04,-5.308 3.785,-3.514 1.086,-1.497L9.195,9.357C10.95,8.046 11.192,8.344 10.706,8.332C10.528,8.328 10.551,8.282 10.899,8.43C11.289,8.597 11.895,8.924 12.853,9.564L20.378,-1.703ZM-0.547,7.611L2.204,11.862L13.579,4.501L10.828,0.25L-0.547,7.611Z"
+        android:fillColor="#ffffff"/>
+  </group>
+  <path
+      android:pathData="M10.957,2.87L11.337,7.788H10.583L10.957,2.87Z"
+      android:fillColor="#FD4552"/>
+  <path
+      android:pathData="M12.813,7.131L15.108,3.787"
+      android:strokeWidth="0.459016"
       android:fillColor="#00000000"
-      android:strokeColor="#EE0000"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M199.66,205.64C200.64,201.9 203.92,199.22 207.79,199.01C211.65,198.81 215.2,201.12 216.57,204.74L229.91,239.91H239.1C242.17,234.59 247.92,231.01 254.5,231.01C264.33,231.01 272.29,238.98 272.29,248.8C272.29,258.63 264.33,266.59 254.5,266.59C247.92,266.59 242.17,263.01 239.1,257.7H223.78C220.08,257.7 216.77,255.41 215.46,251.96L209.82,237.08L195.46,291.96C194.48,295.72 191.16,298.41 187.28,298.59C183.4,298.78 179.85,296.43 178.51,292.78L161.74,247.16L159.62,252.57C158.29,255.98 155,258.22 151.34,258.22H130V251.1H151.34C152.07,251.1 152.73,250.65 153,249.97L161.96,227.13L185.19,290.32C185.46,291.05 186.16,291.52 186.94,291.49C187.72,291.45 188.38,290.91 188.58,290.16L208.57,213.73L222.11,249.43C222.38,250.12 223.04,250.58 223.78,250.58H243.98C244.83,255.63 249.22,259.47 254.5,259.47C260.4,259.47 265.18,254.7 265.18,248.8C265.18,242.91 260.4,238.13 254.5,238.13C249.22,238.13 244.83,241.98 243.98,247.02H225.01L209.92,207.26C209.65,206.54 208.94,206.08 208.16,206.12C207.39,206.16 206.74,206.69 206.54,207.44L186.57,283.78L163.68,221.51C163.43,220.82 162.77,220.35 162.04,220.34C161.3,220.34 160.63,220.79 160.36,221.47L150.13,247.54H130V240.43H145.28L153.74,218.87C155.09,215.44 158.42,213.19 162.11,213.23C165.8,213.27 169.09,215.59 170.36,219.05L185.43,260.04L199.66,205.64Z"
-      android:fillColor="#F9FAEF"
-      android:fillType="evenOdd"/>
+      android:pathData="M6.255,3.788L8.55,7.132"
+      android:strokeWidth="0.459016"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M12.419,5.099L13.927,3.066"
+      android:strokeWidth="0.393443"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M7.567,3.066L9.075,5.099"
+      android:strokeWidth="0.393443"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M11.829,3.394L12.616,2.345"
+      android:strokeWidth="0.327869"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M8.55,2.345L9.337,3.394"
+      android:strokeWidth="0.327869"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M6.366,17.476H3.75V16.45H4.313V13.863H3.829V12.831H6.2C6.585,12.831 6.913,12.862 7.185,12.924C7.452,12.988 7.664,13.111 7.821,13.292C7.979,13.47 8.057,13.724 8.057,14.053C8.057,14.284 7.99,14.485 7.856,14.656C7.722,14.827 7.552,14.951 7.346,15.027C7.616,15.143 7.815,15.294 7.944,15.479C8.074,15.663 8.139,15.917 8.139,16.24C8.139,16.634 7.984,16.94 7.675,17.155C7.368,17.369 6.932,17.476 6.366,17.476ZM5.806,13.863V14.706H5.967C6.188,14.706 6.352,14.675 6.456,14.613C6.563,14.55 6.617,14.434 6.617,14.263C6.617,14.144 6.58,14.048 6.506,13.974C6.432,13.9 6.336,13.863 6.217,13.863H5.806ZM5.806,15.47V16.45H5.911C6.146,16.45 6.327,16.417 6.454,16.351C6.582,16.284 6.646,16.148 6.646,15.942C6.646,15.623 6.452,15.464 6.063,15.464C6.02,15.464 5.977,15.465 5.935,15.467C5.892,15.467 5.849,15.468 5.806,15.47ZM10.62,16.45V17.476H8.661V16.45H9.224V13.863H8.661V12.837H11.163L12.064,15.07L12.956,12.837H15.289V13.863H14.729V16.45H15.289V17.476H12.86V16.45H13.236V14.717L12.21,17.476H11.367L10.154,14.651V16.45H10.62ZM18.193,16.45V17.476H15.77V16.45H16.237V13.863H15.77V12.837H18.193V13.863H17.73V16.45H18.193Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M1.206,11.034H2.649"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M19.37,11.066H20.813"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M1.206,13.034H2.649"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M19.37,13.066H20.813"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M1.206,15.033H2.649"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M19.37,15.066H20.813"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M1.206,17.033H2.649"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M19.37,17.066H20.813"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M1.206,19.034H2.649"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M19.37,19.066H20.813"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M1.927,20.968H3.37"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M18.813,21H20.255"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M3.37,22.673H4.813"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M17.075,22.705H18.517"
+      android:strokeWidth="0.590164"
+      android:fillColor="#00000000"
+      android:strokeColor="#0C83A6"
+      android:strokeLineCap="round"/>
 </vector>
