--- a/app/src/main/res/values-night/Splash.xml
+++ b/app/src/main/res/values-night/Splash.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="SplashScreenTheme" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/surface</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/logo</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_bmi</item>
         <item name="windowSplashScreenAnimationDuration">200</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.HealthChecker</item>
     </style>
